# users

./: .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  Rocket.toml  docker-compose.yml
config/: base.toml  development.toml  docker.toml  k8s.toml
docker/: Dockerfile.build  Dockerfile.run  Dockerfile.rust  Dockerfile.users  docker-compose.yml
migrations/2017-12-18-232656_create_users/: down.sql  up.sql
migrations/2018-01-24-110147_create_user_roles/: down.sql  up.sql
migrations/2018-01-30-065506_no_enum/: down.sql  up.sql
migrations/2018-01-31-135120_create_users/: up.sql
migrations/2018-01-31-135318_create_identities/: down.sql  up.sql
migrations/2018-01-31-135736_create_user_roles/: up.sql
migrations/2018-03-07-102834_add_saga_id/: down.sql  up.sql
migrations/2018-03-12-100000_update_identities/: down.sql  up.sql
migrations/2018-03-15-130000_update_identities/: down.sql  up.sql
migrations/2018-03-16-110000_update_users/: down.sql  up.sql
migrations/2018-03-19-180000_create_reset_token/: down.sql  up.sql
migrations/2018-03-27-150000_update_reset_token/: down.sql  up.sql
src/: app.rs  cache.rs  client.rs  common.rs  config.rs  db.rs  error.rs  errors.rs  http_utils.rs  items.rs  lib.rs  main.rs  message.rs  models.rs  payloads.rs  router.rs  schema.rs  sentry_integration.rs  service.rs  settings.rs  system.rs  system_service.rs  types.rs  users_repo.rs  users_service.rs
tests/: acl_tests.rs  client_test.rs  controller_test.rs  http_tests.rs  jwt_service_test.rs  tests_setup.rs  users_service_test.rs
(+137 files in other folders)
