[package]
name = "users"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
iron = "0.6"
router = "0.6"
log = "0.3.8"
env_logger = "0.4.3"
logger = "0.4"
diesel = { version = "1.0.0-beta1", features = ["postgres"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["postgres"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"