[package]
name = "users"
version = "0.1.0"

[lib]
name = "users_lib"
path = "src/lib.rs"

[dependencies]
config = "0.7"
log = "0.3.8"
env_logger = "0.4.3"
hyper = "0.11.9"
futures = "0.1.17"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.1.1", features = ["postgres"] }
diesel_infer_schema = { version = "1.1.0", features = ["postgres"] }
r2d2 = "0.8.1"
r2d2-diesel = "1.0.0"
validator = "0.6.3"
validator_derive = "0.6.1"
tokio-core = "0.1"
futures-cpupool = "0.1.7"
jsonwebtoken = "4.0.0"
hyper-tls="0.1.2"
chrono = "0.4"
sha3 = "0.7.2"
rand = "0.4"
base64="0.9"
lazy_static="1.0.0"